# gather

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.rst  code-of-conduct.rst  git-log-head  noxfile.py  pyproject.toml  requirements-docs.txt  requirements-lint.txt  requirements-mypy.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pr-main.yml
doc/: conf.py  index.rst
docs/: conf.py  index.rst
src/caparg/: __init__.py  api.py
src/caparg/example/: __main__.py  main.py  selftest.py
src/caparg/tests/: test_commands.py
src/gather/: __init__.py  _helper.py  _version.py  api.py  commands.py  entry.py
src/gather/example/: __init__.py  __main__.py  breakfast.py  main.py  selftest.py
src/gather/tests/: _helper.py  cannot_be_imported.py  test_api.py  test_commands.py  test_entry.py  test_init.py
